18480
This will be particularly annoying once the IDE integrates scaladoc support.

{code}
class PreSuper extends {
  /** bar */
  val foo = new Object
} with Object {}
{code}

it shows:
{code}
scaladoc.scala:4: error: only type definitions and concrete field definitions allowed in early object initialization section
  /** bar */
  ^
{code}
